--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,27 +1,3 @@
-@font-face {
-  font-family: 'IBM Plex Sans';
-  src: url('../assets/fonts/IBMPlexSans-Light.ttf') format('truetype');
-  font-weight: 300;
-}
-
-@font-face {
-  font-family: 'IBM Plex Sans';
-  src: url('../assets/fonts/IBMPlexSans-Regular.ttf') format('truetype');
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'IBM Plex Sans';
-  src: url('../assets/fonts/IBMPlexSans-Medium.ttf') format('truetype');
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: 'IBM Plex Sans';
-  src: url('../assets/fonts/IBMPlexSans-Bold.ttf') format('truetype');
-  font-weight: 700;
-}
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -115,6 +91,7 @@ video {
   font-size: 100%;
   vertical-align: baseline;
   box-sizing: border-box;
+  text-rendering: geometricprecision;
 }
 
 /* HTML5 display-role reset for older browsers */
